Favicon et errors

--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>An error occurred</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+    background-color: #DBE2EF;
+    color: white;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
@@ -23,17 +23,17 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top-color: #BBB;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
-    background-color: white;
+    background-color: #3F72AF;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
   h1 {
     font-size: 100%;
-    color: #730E15;
+    color: white;
     line-height: 1.5em;
   }
 
@@ -61,7 +61,10 @@
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>
+      We are doing our best to deal with the problem. <br><br>
+      Please try to reload your web browser.
+    </p>
   </div>
 </body>
 </html>
